--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.idea
 
 # dependencies
 /node_modules
@@ -10,9 +10,11 @@
 
 # production
 /build
+.dockerignore
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
